services/tools/whoami/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
  namespace: whoami
  annotations:
    external-dns.alpha.kubernetes.io/hostname: whoami.<path:argocd:common-secrets#homelab-domain>
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "whoami.<path:argocd:common-secrets#homelab-domain>"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoami
          port: 80
